Applied some suggestions of FindBugs.